launchpad-buildd (203) UNRELEASED; urgency=medium

  * Remove some more "slave" terminology from tests.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Oct 2021 13:43:31 +0100

launchpad-buildd (202) bionic; urgency=medium

  [ Thomas Bechtold ]
  * Add git_shallow_clone option to vcs_fetch() and use it for OCI build
    (LP: #1939392).

  [ Ioana Lasc ]
  * Gather dpkg.yaml for snap builds.

 -- Ioana Lasc <ioana.lasc@canonical.com>  Tue, 21 Sep 2021 12:46:41 +0300

launchpad-buildd (201) bionic; urgency=medium

  * Sanitize non-user-bound macaroons in build logs.
  * Switch to "charmcraft pack --destructive-mode", now that Charmcraft 1.2
    is in the stable channel.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 01 Sep 2021 18:17:34 +0100

launchpad-buildd (200) bionic; urgency=medium

  * Add core22 to the list of supported core snap names.
  * Rename "snap proxy" to "builder proxy", since it's used for several
    different build types nowadays.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Aug 2021 16:38:32 +0100

launchpad-buildd (199) bionic; urgency=medium

  * Upload oci layers to librarian as tar.gz

 -- Ioana Lasc <ioana.lasc@canonical.com>  Tue, 03 Aug 2021 12:08:15 +0300

launchpad-buildd (198) bionic; urgency=medium

  * Run charmcraft in verbose mode.
  * Honour proxy arguments when building charms.
  * Install charmcraft with --classic.
  * Run charmcraft in managed mode.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 20 Jul 2021 10:05:27 +0100

launchpad-buildd (197) bionic; urgency=medium

  [ Tom Wardill ]
  * Add charm building support

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 14 Jun 2021 16:30:33 +0100

launchpad-buildd (196) bionic; urgency=medium

  * Handle symlinks in OCI image files

 -- Tom Wardill <tom.wardill@canonical.com>  Mon, 17 May 2021 14:19:04 +0100

launchpad-buildd (195) bionic; urgency=medium

  * sbuild-package: Temporarily remove lxd group membership (LP: #1820348).